--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ SITE_URL=http://localhost:5173
 SUPABASE_URL=https://evsmhffvcdhtgcrthpoh.supabase.co
 SUPABASE_ANON_KEY=your_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Nextcloud Configuration
+VITE_NEXTCLOUD_USERNAME=admin
+VITE_NEXTCLOUD_PASSWORD=9xHKC-WpYfd-4GwXB-HeXac-2p3as
+VITE_NEXTCLOUD_BASE_URL=https://alpenview.ch
