--- a/package.json
+++ b/package.json
@@ -49,12 +49,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.19.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "musicbrainz-api": "^0.25.1",
     "next-themes": "^0.3.0",
+    "nextcloud-node-client": "^1.8.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,11 +73,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "concurrently": "^8.2.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
