--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs", "npm", "deno"]
+nixPkgs = ["nodejs_20", "npm"]
+
+[phases.build]
+cmds = ["npm install", "npm run build"]
+
+[start]
+cmd = "npm start"
